--- a/styles.css
+++ b/styles.css
@@ -21,21 +21,22 @@ body /*pour tout le site appliquer :*/
         margin: auto;
     }
 
-.row  
+.row  /*taille du bloc row*/
     {
         width: 1360px;
         margin: auto;
+        height: 35vh;  /*hauteur de sous-contenaire row*/
     }
 
-.box 
+.box  /*taille du bloc box*/
     {
          width: 1360px;
         margin: auto;
     }
 
 
+/*DEBUT de la 1ere PARTIE du HEADER*/
 
-/*HEADER*/
 /*partie du barre du menu*/
 
 .barre-de-navigation
@@ -74,7 +75,12 @@ h1   /*le logo*/
         height: 44px;
    }
 
-.row {
+/*.................FIN de le 1ere PARTIE HEADER..................*/
+
+
+/*................DEBUT de la 2eme PARTIE ACCUEIL PHOTO..........*/
+
+.row {      /*glte du  bloc row*/
     display: flex;
     margin-top: 75px;
     justify-content: space-between;
@@ -112,10 +118,11 @@ h2.text-center /*le texte du titre de presentation*/
         color:white;
         text-decoration: none;
         margin: 45px;
-        padding: 5pxpx;
+        padding: 16px;
         font-size: 20px;
         border-radius: 5px;
-        background-color:rgb(233, 21, 21);
+        background-color:orangered;
+;
     }
 
 .accueil-text-left p 
@@ -168,7 +175,7 @@ h5  /*le sous-titre h5 articles et view*/
 #articles-view  /*partie article et coloration de fond*/
     {
         background-color: #edf7fa;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 
 h3 
@@ -181,23 +188,29 @@ h3
         font-size: 18px;
     }
 
+
+/*................FIN de la 2eme PARTIE ACCUEIL PHOTO............*/
+
+
+/*.................DEBUT de la 3eme PARTIE  WORKS........*/
+
 .box img            /*les images de la partie box*/
 {
-   width: 246x;
-   height: 180px;
+   width: 226;
+   height: 160px;
    gap: 20px;
    border-radius: 4px;
 }
 
-.works
+#works
     {
-        margin-bottom: 30px;
+    padding: 30px;
 
     }
 
 .box 
     {
-        margin-top: 60px;
+        padding:30px;
     }
 
 
@@ -208,8 +221,70 @@ h3
         margin-top: 30px;
     }
 
+h4.box 
+{
+    margin-bottom: 30px;
+}
+
+span.annee   /* commun à toutes les annees*/
+    {
+    font-size: 20px;
+    background-color: rgb(14, 14, 36);
+    color: #edf7fa;
+    border-radius: 4px;
+    font-weight: bold;
+    line-height: 60px;  /* espace entre les lignes*/
+    padding: 6px;
+    }
+
+ 
+span.illustrations  /*commun à toutes les illustrations*/
+    {
+    font-size: 18px; 
+    font-style: italic;
+    color: gray;
+    margin-left: 30px;
+    
+    }
+.mestravaux h3
+{
+    font-size: 30px;
+}
+
+/*.................FIN de la 3eme PARTIE WORKS.............*/
+#contact
+    {
+        margin-top: 20px;
+    }
+
+#contact.row 
+    {      /*glte du  bloc row*/
+    display: flex;
+    margin-top: 75px;
+    justify-content: space-between;
+    margin-top: 180px;
+    }
 
 
+.mode-contact       /*partie droite se la section articles et view, taille et coloration*/
+    {
+    width: 50%;
+    height: 265x;
+    }
+
+
+.mode-contact       /*partie droite se la section articles et view, taille et coloration*/
+    {
+    width: 50%;
+    height: 265x;
+    margin-bottom: 40px;
+    }
+/*.................DEBUT de la partie CONTACT..............*/
+
+
+
+
+/*..................FIN de la PARTIE CONTACT...............*/
 
 
 
