--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 * /*pour tout le site appliquer longueur et largeur de 0 px pour maitriser la pixelisation*/
     {
     margin: 0px;
-    padding:0 px;
+    padding:0px;
     }
 
 body /*pour tout le site appliquer :*/
@@ -17,21 +17,38 @@ body /*pour tout le site appliquer :*/
 
 .contener  /* taille du contener*/
     {
-        width: 1360px;
+        max-width: 1320px;
         margin: auto;
+        padding-left: 30px;
+        padding-right: 20px;
+        box-sizing: border-box;
+            
     }
 
 .row  /*taille du bloc row*/
     {
-        width: 1360px;
+        width: 1320px;
         margin: auto;
-        height: 35vh;  /*hauteur de sous-contenaire row*/
+        height: 35vh;  /*hauteur de sous-contenaire row*/  
+        display: flex;  /*glte du  bloc row*/
+        margin-top: 65px;
+        justify-content: space-between;
+            padding-left: 30px;
+        padding-right: 20px;
+        box-sizing: border-box;
+        
     }
+    
 
 .box  /*taille du bloc box*/
     {
-         width: 1360px;
+        max-width: 1320px;
         margin: auto;
+        content: space-between;
+        padding-left: 30px;
+        padding-right: 20px;
+        box-sizing: border-box;
+        
     }
 
 
@@ -39,12 +56,13 @@ body /*pour tout le site appliquer :*/
 
 /*partie du barre du menu*/
 
-.barre-de-navigation
+nav.barre-de-navigation
     {
         display: flex;  /*separation  flexible du menu*/
         font-weight: bold; /*police d'ecriture en gras*/
         justify-content:space-between; /*separer la barre de navigation */
         align-items: center;
+        max-width: 1320px;
 
     }
 
@@ -80,11 +98,8 @@ h1   /*le logo*/
 
 /*................DEBUT de la 2eme PARTIE ACCUEIL PHOTO..........*/
 
-.row {      /*glte du  bloc row*/
-    display: flex;
-    margin-top: 75px;
-    justify-content: space-between;
-    margin-bottom: 20px;
+#accueil-photo {
+    height: auto;
 }
 
 h2.text-center /*le texte du titre de presentation*/
@@ -93,24 +108,19 @@ h2.text-center /*le texte du titre de presentation*/
     font-size: 44px;
     }
 
-.accueil-photo-right /*partie de la photo de l'en tete*/
-    {
-    width: 243px;
-    height: 243px;
-    border-radius:50%;
-    object-fit: cover;
-    }
+
 .accueil-photo-right a img  /*arrondi de la photo de thomas*/
     {
     width: 243px;
     height:243px;
     border-radius:50%;
     object-fit:cover;
+    margin: auto 40px;
     }
 
 .accueil-text-left /*largeur de la partie gauche de l'accueil*/
     {
-        width: 680px;
+        width: 670px;
     }
 
 .accueil-photo-telecharger /*telecharger*/
@@ -158,24 +168,39 @@ h5  /*le sous-titre h5 articles et view*/
 
 .articles   /*partie gauche de section articles et view, taille et coloration*/
     {
-    width: 543px;
-    height: 265x;
+    width: 640px;
+    height: 265px;
     background-color: white;
-    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 20px 30px;
+    margin-left: 20px;
+    max-width: 47%;
     }
 
 .view       /*partie droite se la section articles et view, taille et coloration*/
     {
-    width: 543px;
-    height: 265x;
+    width: 640px;
+    height: 265px;
     background-color: white;
-    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 20px 30px;
+    margin-right: 20px;
+    max-width: 47%;
     }
+    
 
-#articles-view  /*partie article et coloration de fond*/
+#articles-view/*partie article et coloration de fond*/
     {
         background-color: #edf7fa;
-        margin-bottom: 30px;
+        margin: auto;
+        max-width: 1320px;
+        margin-top: 30px;
+        box-sizing: border-box;
+        padding-left: 30px;
+        padding-right: 20px;
+        
     }
 
 h3 
@@ -186,6 +211,10 @@ h3
 .date 
     {
         font-size: 18px;
+        display: flex;
+        gap: 25px
+        
+
     }
 
 
@@ -197,7 +226,7 @@ h3
 #works
     {
         margin:auto;
-        width: 1360px;
+        max-width: 1320px;
     }
 
 
@@ -313,6 +342,7 @@ input#Envoyer /*le bouton envoyer du mail*/
         color: white;
         font-size: 18px;
         cursor: pointer;
+         border: none;
     }
 
 
@@ -320,7 +350,8 @@ textarea#Message /*message*/
     {
         width: 528px;
         height: 80px;
-         background-color: rgb(236, 230, 230);
+        background-color: rgb(236, 230, 230);
+        border: none;
     }
 
 select#Budget /*budget*/
@@ -328,6 +359,7 @@ select#Budget /*budget*/
         width: 530px;
         height: 35px;
          background-color: rgb(236, 230, 230);
+        border: none;
     }
 
 select#service /*service*/
@@ -335,6 +367,7 @@ select#service /*service*/
         width: 530px;
         height: 35px;
         background-color: rgb(236, 230, 230);
+         border: none;
     }
 
 input#name /*nom*/
@@ -342,6 +375,7 @@ input#name /*nom*/
         width: 530px;
         height: 35px;
         background-color: rgb(236, 230, 230);
+         border: none;
     }
 
 
@@ -350,6 +384,7 @@ input#email  /*email*/
         width: 530px;
         height: 35px;
         background-color: rgb(236, 230, 230);
+         border: none;
     }
 
 .mode-contact h3
@@ -385,6 +420,10 @@ label
  
 }
 
+a {             /*espace entre les logos des reseaux sociaux*/
+    margin: 20px;
+}
+
 .bas 
     {
         font-size: 16px;
@@ -393,13 +432,15 @@ label
         text-align: center;
     }
 
-
-
-
-
-
 /*..................FIN du FOOTER...........................*/
-/*.......................FIN du SITE*/
+
+/*....................PARTIE RESPONSIVE.....................*/
+@media screen {
+    
+}
+
+
+/*.......................FIN du SITE*....................;;;/
 
 
 
